- Added Manage Account Page - Fixed the alignment of upgrade bar and removed the "copyright.." on the top left of the pages - Changed color of the upgrade button to be the same as with the mock up.

--- a/sass/buyerFooter.scss
+++ b/sass/buyerFooter.scss
@@ -68,7 +68,7 @@
     padding-left: 40px;
 
     img {
-        width: 95%;        
+        width: 94%;        
     }
 }
 
